tests/ui/lint/snapshots/discarded_value_as_while_loop_tail.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused expression value
   ╭─[test.lis:6:5]
 5 │     i += 1
 6 │     1 + 2
   ·     ──┬──
   ·       ╰── this value is discarded
 7 │   }
   ╰────
  help: Use the value, or ignore with `let _ = ...` · code: [lint.unused_value]
