tests/ui/lint/snapshots/double_bool_negation.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Double boolean negation
   ╭─[test.lis:4:11]
 3 │   let x = true;
 4 │   let _ = !!x
   ·           ─┬
   ·            ╰── accidental double negation
 5 │ }
   ╰────
  help: Remove one of the negation operators · code: [lint.double_bool_negation]
