tests/ui/lint/snapshots/double_comparison_less_or_greater.snap
---
source: tests/ui/lint/mod.rs
---
  ● Comparisons can be combined
   ╭─[test.lis:5:11]
 4 │   let y = 3;
 5 │   let _ = x < y || x > y
   ·           ───────┬──────
   ·                  ╰── simplify to `!=`
 6 │ }
   ╰────
  help: These two comparisons cover the same operands, so they are equivalent to a single `!=` · code: [lint.double_comparison]
