tests/ui/lint/snapshots/dup_arg_bytes_compare.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Duplicate arguments
   ╭─[test.lis:6:11]
 5 │   let bs: Slice<byte> = Slice.new<byte>()
 6 │   let _ = bytes.Compare(bs, bs)
   ·           ──────────┬──────────
   ·                     ╰── identical arguments
 7 │ }
   ╰────
  help: Passing the same value twice to `bytes.Compare` makes this call a no-op. Did you mean to pass different values? · code: [lint.duplicate_arguments]
